# gui-seabots_pi

./: .gitignore  CMakeLists.txt  VERSION.cmake  manifest.xml
src/: Images.cpp  Images.hpp  NMEA.cpp  NMEA.hpp  OCPNInterfaceImpl.cpp  OCPNInterfaceImpl.hpp  Paths.hpp.in  Plugin.cpp  Plugin.hpp  ocpn_plugin.h  trajectory.frag  trajectory.vert
test/: CMakeLists.txt  suite.cpp  test_NMEA.cpp
tools/: png2wx.pl
